feat(federation-set): add support for

--- a/test/integration/default/files/_mapdata/debian-11.yaml
+++ b/test/integration/default/files/_mapdata/debian-11.yaml
@@ -57,9 +57,14 @@ values:
           vhost: default_vhost
       nodeport: 5672
       parameters:
-        my-upstream1:
+        my-federation-upstream-set:
+          component: federation-upstream-set
+          definition:
+            upstream: my-federation-upstream1
+          vhost: default_vhost
+        my-federation-upstream1:
           component: federation-upstream
-          params:
+          definition:
             ack-mode: on-confirm
             max-hops: 1
             trust-user-id: true
@@ -73,17 +78,24 @@ values:
         - rabbitmq_shovel
         - rabbitmq_shovel_management
       policies:
-        my-federate-policy:
-          definition:
+        my-federation-policy1:
+          params:
             federation-upstream-set: all
-          pattern: '^federated\.'
+          pattern: '^federated1\.'
+          priority: 1
+          vhost: default_vhost
+        my-federation-policy2:
+          params:
+            federation-upstream-set: my-federation-upstream-set
+          pattern: '^federated2\.'
           priority: 1
           vhost: default_vhost
         my-ha-policy:
-          definition:
+          params:
             ha-mode: nodes
             ha-params: ["rabbit", "rabbit2"]
           pattern: '.*'
+          priority: 1
           vhost: default_vhost
       queues:
         my-queue:
@@ -160,9 +172,14 @@ values:
       join_node: rabbit   # create multinode cluster on localhost
       nodeport: 5673
       parameters:
-        my-upstream1:
+        my-federation-upstream-set:
+          component: federation-upstream-set
+          definition:
+            upstream: my-federation-upstream1
+          vhost: default_vhost
+        my-federation-upstream1:
           component: federation-upstream
-          params:
+          definition:
             ack-mode: on-confirm
             max-hops: 1
             trust-user-id: true
@@ -170,17 +187,24 @@ values:
           vhost: rabbit2_vhost
       plugins: []
       policies:
-        my-federate-policy:
-          definition:
+        my-federation-policy1:
+          params:
             federation-upstream-set: all
-          pattern: '^federated\.'
+          pattern: '^federated1\.'
+          priority: 1
+          vhost: rabbit2_vhost
+        my-federation-policy2:
+          params:
+            federation-upstream-set: my-federation-upstream-set
+          pattern: '^federated2\.'
           priority: 1
           vhost: rabbit2_vhost
         my-ha-policy:
-          definition:
+          params:
             ha-mode: nodes
             ha-params: ["rabbit", "rabbit2"]
           pattern: '.*'
+          priority: 1
           vhost: rabbit2_vhost
       queues:
         my-queue:
