--- a/pillar.example
+++ b/pillar.example
@@ -88,27 +88,40 @@ rabbitmq:
               - '.*'
               - '.*'
               - '.*'
-      policies:
-        my-federate-policy:
-          definition:
-            federation-upstream-set: all
-          pattern: '^federated\.'
-          priority: 1
-          vhost: default_vhost
-        my-ha-policy:
-          definition:
-            ha-mode: nodes
-            ha-params: ["rabbit", "rabbit2"]
-          pattern: '.*'
-          vhost: default_vhost
       parameters:
-        my-upstream1:
+        my-federation-upstream-set:
+          component: federation-upstream-set
+          definition:
+            # todo: multiple dict items (not just one)
+            upstream: my-federation-upstream1
+          vhost: default_vhost
+        my-federation-upstream1:
           component: federation-upstream
-          params:
+          definition:
             uri: 'amqp://saltstack_mq:password@localhost'
             ack-mode: on-confirm
             trust-user-id: true
             max-hops: 1
+          vhost: default_vhost
+      policies:
+        my-federation-policy1:
+          params:
+            federation-upstream-set: all
+          pattern: '^federated1\.'
+          priority: 1
+          vhost: default_vhost
+        my-federation-policy2:
+          params:
+            federation-upstream-set: my-federation-upstream-set
+          pattern: '^federated2\.'
+          priority: 1
+          vhost: default_vhost
+        my-ha-policy:
+          params:
+            ha-mode: nodes
+            ha-params: ["rabbit", "rabbit2"]
+          pattern: '.*'
+          priority: 1
           vhost: default_vhost
 
     rabbit2:
@@ -197,27 +210,40 @@ rabbitmq:
               - '.*'
               - '.*'
               - '.*'
-      policies:
-        my-federate-policy:
-          definition:
-            federation-upstream-set: all
-          pattern: '^federated\.'
-          priority: 1
-          vhost: rabbit2_vhost
-        my-ha-policy:
-          definition:
-            ha-mode: nodes
-            ha-params: ["rabbit", "rabbit2"]
-          pattern: '.*'
-          vhost: rabbit2_vhost
       parameters:
-        my-upstream1:
+        my-federation-upstream-set:
+          component: federation-upstream-set
+          definition:
+            # todo: multiple dict items (not just one)
+            upstream: my-federation-upstream1
+          vhost: rabbit2_vhost
+        my-federation-upstream1:
           component: federation-upstream
-          params:
+          definition:
             uri: 'amqp://saltstack_mq:password@localhost'
             ack-mode: on-confirm
             trust-user-id: true
             max-hops: 1
+          vhost: rabbit2_vhost
+      policies:
+        my-federation-policy1:
+          params:
+            federation-upstream-set: all
+          pattern: '^federated1\.'
+          priority: 1
+          vhost: rabbit2_vhost
+        my-federation-policy2:
+          params:
+            federation-upstream-set: my-federation-upstream-set
+          pattern: '^federated2\.'
+          priority: 1
+          vhost: rabbit2_vhost
+        my-ha-policy:
+          params:
+            ha-mode: nodes
+            ha-params: ["rabbit", "rabbit2"]
+          pattern: '.*'
+          priority: 1
           vhost: rabbit2_vhost
 
   pkg:
