--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -137,7 +137,7 @@ rubocop:
 # default-rockylinux-8-tiamat-py3: {extends: '.test_instance'}
 # default-debian-11-master-py3: {extends: '.test_instance'}
 # nopillars-debian-11-master-py3: {extends: '.test_instance'}
-### debian-11-master-py3: {extends: '.test_instance'}
+debian-11-master-py3: {extends: '.test_instance'}
 # default-debian-10-master-py3: {extends: '.test_instance'}
 # nopillars-debian-10-master-py3: {extends: '.test_instance'}
 debian-10-master-py3: {extends: '.test_instance'}
@@ -146,7 +146,7 @@ debian-10-master-py3: {extends: '.test_instance'}
 # debian-9-master-py3: {extends: '.test_instance'}
 # default-ubuntu-2004-master-py3: {extends: '.test_instance'}
 # nopillars-ubuntu-2004-master-py3: {extends: '.test_instance'}
-### ubuntu-2004-master-py3: {extends: '.test_instance'}
+ubuntu-2004-master-py3: {extends: '.test_instance'}
 # default-ubuntu-1804-master-py3: {extends: '.test_instance'}
 # nopillars-ubuntu-1804-master-py3: {extends: '.test_instance'}
 ubuntu-1804-master-py3: {extends: '.test_instance'}
@@ -191,7 +191,7 @@ oraclelinux-7-master-py3: {extends: '.test_instance'}
 # gentoo-stage3-systemd-master-py3: {extends: '.test_instance'}
 # default-almalinux-8-master-py3: {extends: '.test_instance'}
 # nopillars-almalinux-8-master-py3: {extends: '.test_instance'}
-# almalinux-8-master-py3: {extends: '.test_instance'}
+almalinux-8-master-py3: {extends: '.test_instance'}
 # default-rockylinux-8-master-py3: {extends: '.test_instance'}
 # nopillars-rockylinux-8-master-py3: {extends: '.test_instance'}
 rockylinux-8-master-py3: {extends: '.test_instance'}
