test(_mapdata): update to include `consumer_timeout: 3600000` [skip ci]
Finalise 60c0bcd81f855bb3d22754e4193c73a3097e946d (PR #112).

--- a/test/integration/default/files/_mapdata/centos-7.yaml
+++ b/test/integration/default/files/_mapdata/centos-7.yaml
@@ -45,6 +45,7 @@ values:
       clustered: false
       config:
         auth_backends.1: internal
+        consumer_timeout: 3600000
         listeners.tcp.1: 0.0.0.0:5672
       distport: 25672
       exchanges:
