chore(clean): remove os provided erlang package too

--- a/rabbitmq/parameters/defaults.yaml
+++ b/rabbitmq/parameters/defaults.yaml
@@ -30,6 +30,7 @@ values:
     # https://github.com/rabbitmq/rabbitmq-server/releases/tag/v3.8.14
     use_upstream: repo    # use upstream repo (if applicable)
     deps_disablerepo: ''  # could be useful
+    remove_os_erlang: true    # remove OS erlang package
     deps: {}
 
   dir:
