--- a/test/integration/default/files/_mapdata/ubuntu-16.yaml
+++ b/test/integration/default/files/_mapdata/ubuntu-16.yaml
@@ -262,6 +262,7 @@ values:
     - libtinfo5
     deps_disablerepo: ''
     name: rabbitmq-server
+    remove_os_erlang: true
     use_upstream: repo
   retry_option:
     attempts: 0
