--- a/test/integration/default/files/_mapdata/ubuntu-20.yaml
+++ b/test/integration/default/files/_mapdata/ubuntu-20.yaml
@@ -263,6 +263,7 @@ values:
     - erlang-eldap
     deps_disablerepo: ''
     name: rabbitmq-server
+    remove_os_erlang: true
     use_upstream: repo
   retry_option:
     attempts: 0
