--- a/test/integration/nopillars/files/_mapdata/ubuntu-20.yaml
+++ b/test/integration/nopillars/files/_mapdata/ubuntu-20.yaml
@@ -47,6 +47,7 @@ values:
       - erlang-eldap
     deps_disablerepo: ''
     name: rabbitmq-server
+    remove_os_erlang: true
     use_upstream: repo
   retry_option:
     attempts: 0
