--- a/rabbitmq/parameters/os_family/Debian.yaml
+++ b/rabbitmq/parameters/os_family/Debian.yaml
@@ -19,10 +19,10 @@ values:
     repo:
       erlang:
         # yamllint disable-line rule:line-length
-        name: deb https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/deb/ubuntu bionic main
-        # yamllint disable-line rule:line-length
         key_url: https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/gpg.E495BB49CC4BBE5B.key
+        url: https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-erlang/deb
       rabbitmq:
-        name: deb https://packagecloud.io/rabbitmq/rabbitmq-server/ubuntu bionic main
-        key_url: https://packagecloud.io/rabbitmq/rabbitmq-server/gpgkey
+        # yamllint disable-line rule:line-length
+        key_url: https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-server/gpg.9F4587F226208342.key
+        url: https://dl.cloudsmith.io/public/rabbitmq/rabbitmq-server/deb
 ...
