--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,11 +162,11 @@ ubuntu-2004-master-py3: {extends: '.test_instance'}
 ubuntu-1804-master-py3: {extends: '.test_instance'}
 # default-centos-stream8-master-py3: {extends: '.test_instance_failure_permitted'}
 # nopillars-centos-stream8-master-py3: {extends: '.test_instance_failure_permitted'}
-centos-stream8-master-py3: {extends: '.test_instance_failure_permitted'}
+centos-stream8-master-py3: {extends: '.test_instance'}
 # default-centos-7-master-py3: {extends: '.test_instance'}
 # nopillars-centos-7-master-py3: {extends: '.test_instance'}
 # centos-7-master-py3: {extends: '.test_instance'}
-default-fedora-36-master-py3: {extends: '.test_instance_failure_permitted'}
+default-fedora-36-master-py3: {extends: '.test_instance'}
 # nopillars-fedora-36-master-py3: {extends: '.test_instance_failure_permitted'}
 # fedora-36-master-py3: {extends: '.test_instance_failure_permitted'}
 default-fedora-35-master-py3: {extends: '.test_instance'}
@@ -175,7 +175,7 @@ default-fedora-35-master-py3: {extends: '.test_instance'}
 default-opensuse-leap-153-master-py3: {extends: '.test_instance'}
 # nopillars-opensuse-leap-153-master-py3: {extends: '.test_instance'}
 # opensuse-leap-153-master-py3: {extends: '.test_instance'}
-default-opensuse-tmbl-latest-master-py3: {extends: '.test_instance_failure_permitted'}
+default-opensuse-tmbl-latest-master-py3: {extends: '.test_instance'}
 # nopillars-opensuse-tmbl-latest-master-py3: {extends: '.test_instance_failure_permitted'}
 # opensuse-tmbl-latest-master-py3: {extends: '.test_instance_failure_permitted'}
 # default-amazonlinux-2-master-py3: {extends: '.test_instance'}
